--- a/IClothingApplication/Views/Tools/AdminBillingManager.cshtml
+++ b/IClothingApplication/Views/Tools/AdminBillingManager.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<IClothingApplication.Models.ShoppingCart>
 
 @{
-    ViewBag.Title = "AdminBillingManager";
+    ViewBag.Title = "Old Orders Customers";
 }
 
-<h2>AdminBillingManager</h2>
+<h2>Checked Out Orders</h2>
 
 
 
