--- a/IClothingApplication/Views/Home/Index.cshtml
+++ b/IClothingApplication/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div style="background-color:#cccccc;">
+<div style="background-color: #e2dcd5; ">
     <div class="jumbotron">
         <div style="width: 100%; height: 180px; background-color: #383636; font-size:100px; font-family:'Baskerville Old Face'; text-align:center; color: white;">
             iclothing inc.
@@ -13,7 +13,7 @@
         </div>
 
     </div>
-    <div class="row p-3" align="center">
+    <div class="row p-3 pb-5" align="center">
         <div class="col-md-4">
             <h2>@Html.ActionLink("Shop Women's", "Index", "Products", new { sortOrder = ViewBag.PriceSortParm, filter = "Women's", filterType = "Department", searchString = ViewBag.searchString, changeFilter = true, }, new { @class = "btn btn-secondary me-1" })</h2>
             <img src="~/Images/women1.jpg" width="250" height="400" border="2px" alt="Woman Photo" style="object-fit: cover;"/>
