Added Admin Email, Added View All to Manage

--- a/IClothingApplication/Views/Home/AdminDashboard.cshtml
+++ b/IClothingApplication/Views/Home/AdminDashboard.cshtml
@@ -43,8 +43,8 @@
 
     <div class="col-md-4">
         <img src="~/Images/mail.jpg" width="120" height="120" alt="Mail Photo" />
-        <h2>@Html.ActionLink("Emails", "Index", "Emails")</h2>
-        <p>Emails Basic Information.</p>
+        <h2>@Html.ActionLink("Your Emails", "PersonalIndex", "AdminEmails")</h2>
+        <p>Emails sent to you</p>
     </div>
 
     <div class="col-md-4">
