--- a/IClothingApplication/Views/Home/AdminManagementDashboard.cshtml
+++ b/IClothingApplication/Views/Home/AdminManagementDashboard.cshtml
@@ -80,4 +80,14 @@
         <h2>@Html.ActionLink("ItemDeliveries", "Index", "ItemDeliveries")</h2>
         <p>ItemDeliveries Database</p>
     </div>
+
+    <div class="col-md-4">
+        <h2>@Html.ActionLink("UserBillings", "Index", "UserBillings")</h2>
+        <p>UserBillings Database</p>
+    </div>
+
+    <div class="col-md-4">
+        <h2>@Html.ActionLink("AdminEmails", "Index", "AdminEmails")</h2>
+        <p>Admin Emails Database</p>
+    </div>
 </div>
