--- a/IClothingApplication/Views/ShoppingCarts/EditItem.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/EditItem.cshtml
@@ -25,6 +25,7 @@
                 <h3>
                     @Html.DisplayFor(model => model.Product.productName)
                 </h3>
+                <h5 class="text-center">@Model.Product.productQty In Stock</h5>
                 <div style="height: 5vh">
 
                 </div>
