--- a/IClothingApplication/Views/Tools/BillingDetails.cshtml
+++ b/IClothingApplication/Views/Tools/BillingDetails.cshtml
@@ -18,14 +18,28 @@
         <div class="card-body">
             <h4 class="card-title text-center">@Html.DisplayFor(model => model.Customer.customerName)'s Order</h4>
             <hr />
-            <p class="card-text">
-                <strong>Status:</strong> @Html.DisplayFor(model => model.OrderStatus.status)<br>
-                <strong>Date:</strong> $@Html.DisplayFor(model => model.OrderStatus.statusDate)<br>
-                <strong>Payment:</strong> $@sum<br>
-                <strong>Billing Address:</strong> @Html.DisplayFor(model => model.Customer.customerBillingAddress)<br>
-                <strong>Sticker ID:</strong> @Html.DisplayFor(model => model.ItemDelivery.stickerID)
-                <strong>Sticker Date:</strong> @Html.DisplayFor(model => model.ItemDelivery.stickerDate)
-            </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="card-text">
+                            <strong>Status:</strong> @Html.DisplayFor(model => model.OrderStatus.status)<br>
+                            <strong>Date:</strong> $@Html.DisplayFor(model => model.OrderStatus.statusDate)<br>
+                            <strong>Payment:</strong> $@sum<br>
+                            <strong>Billing Address:</strong> @Html.DisplayFor(model => model.Customer.customerBillingAddress)<br>
+                            @*<strong>Sticker ID:</strong> @Html.DisplayFor(model => model.ItemDelivery.stickerID)<br />
+                            <strong>Sticker Date:</strong> @Html.DisplayFor(model => model.ItemDelivery.stickerDate)*@
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="card-text">
+                            <strong>Card Number:</strong> @Html.DisplayFor(model => model.UserBilling.FirstOrDefault().cardNumber)<br>
+                            <strong>Expiration Date:</strong> $@Html.DisplayFor(model => model.UserBilling.FirstOrDefault().expirationDate)<br>
+                            <strong>CVV:</strong> @Html.DisplayFor(model => model.UserBilling.FirstOrDefault().cvv)<br>
+                            <strong>Billing Date:</strong> @Html.DisplayFor(model => model.UserBilling.FirstOrDefault().billingDate)<br>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
