--- a/IClothingApplication/Views/ShoppingCarts/Checkout.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/Checkout.cshtml
@@ -55,8 +55,8 @@
         <div>
 
             <div class="form-actions no-color">
-                <input type="submit" value="Confirm" class="btn btn-outline-success" /> |
-                @Html.ActionLink("Back to Cart", "ViewCart", new { }, new { @class = "text-dark" })
+                <input type="submit" value="Confirm" class="btn btn-outline-success" />
+                @Html.ActionLink("Back to Cart", "ViewCart", new { }, new { @class = "btn btn-secondary me-1" })
             </div>
         </div>
     </div>
