--- a/IClothingApplication/Views/ShoppingCarts/EditItem.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/EditItem.cshtml
@@ -51,8 +51,8 @@
             <div>
 
                 <div class="form-actions no-color">
-                    <input type="submit" value="Save" class="btn btn-outline-success" /> |
-                    @Html.ActionLink("Back to Cart", "ViewCart", new { }, new { @class = "text-dark" })
+                    <input type="submit" value="Save" class="btn btn-outline-success" />
+                    @Html.ActionLink("Back to Cart", "ViewCart", new { }, new { @class = "btn btn-secondary me-1" })
                 </div>
             </div>
         </div>
