--- a/IClothingApplication/Views/ShoppingCarts/Delete.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/Delete.cshtml
@@ -25,7 +25,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-secondary me-1" /> |
+            <input type="submit" value="Delete" class="btn btn-secondary me-1" />
             @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-secondary me-1" })
         </div>
     }
