--- a/IClothingApplication/Views/ShoppingCarts/DeleteItem.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/DeleteItem.cshtml
@@ -36,8 +36,8 @@
                     @Html.AntiForgeryToken()
 
                     <div class="form-actions no-color">
-                        <input type="submit" value="Delete" class="btn btn-outline-danger" /> |
-                        @Html.ActionLink("Back to Cart", "ViewCart", new { }, new { @class = "text-dark" })
+                        <input type="submit" value="Delete" class="btn btn-secondary me-1" />
+                        @Html.ActionLink("Back to Cart", "ViewCart", new { }, new { @class = "btn btn-secondary me-1" })
                     </div>
                 }
             </div>
