--- a/IClothingApplication/Views/Home/AdminManagementDashboard.cshtml
+++ b/IClothingApplication/Views/Home/AdminManagementDashboard.cshtml
@@ -7,87 +7,87 @@
 <h4>The following are links to allow access and editing to the databases</h4>
 <div class="row">
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Customers", "Index", "Customers")</h2>
+        <h2>@Html.ActionLink("Customers", "Index", "Customers", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Customers Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Administrators", "Index", "Administrators")</h2>
+        <h2>@Html.ActionLink("Administrators", "Index", "Administrators", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Administrators Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("UserPasswords", "Index", "UserPasswords")</h2>
+        <h2>@Html.ActionLink("UserPasswords", "Index", "UserPasswords", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>UserPasswords Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("AboutUs", "Index", "AboutUs")</h2>
+        <h2>@Html.ActionLink("AboutUs", "Index", "AboutUs", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>AboutUs Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("UserQueries", "Index", "UserQueries")</h2>
+        <h2>@Html.ActionLink("UserQueries", "Index", "UserQueries", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>UserQueries Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Departments", "Index", "Departments")</h2>
+        <h2>@Html.ActionLink("Departments", "Index", "Departments", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Departments Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Categories", "Index", "Categories")</h2>
+        <h2>@Html.ActionLink("Categories", "Index", "Categories", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Categories Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Brands", "Index", "Brands")</h2>
+        <h2>@Html.ActionLink("Brands", "Index", "Brands", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Brands Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Products", "Index", "Products")</h2>
+        <h2>@Html.ActionLink("Products", "Index", "Products", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Products Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("UserComments", "Index", "UserComments")</h2>
+        <h2>@Html.ActionLink("UserComments", "Index", "UserComments", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>UserComments Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("ShoppingCarts", "Index", "ShoppingCarts")</h2>
+        <h2>@Html.ActionLink("ShoppingCarts", "Index", "ShoppingCarts", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>ShoppingCarts Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("ItemWrappers", "Index", "ItemWrappers")</h2>
+        <h2>@Html.ActionLink("ItemWrappers", "Index", "ItemWrappers", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>ItemWrappers Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("OrderStatus", "Index", "OrderStatus")</h2>
+        <h2>@Html.ActionLink("OrderStatus", "Index", "OrderStatus", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>OrderStatus Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Emails", "Index", "Emails")</h2>
+        <h2>@Html.ActionLink("Emails", "Index", "Emails", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Emails Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("ItemDeliveries", "Index", "ItemDeliveries")</h2>
+        <h2>@Html.ActionLink("ItemDeliveries", "Index", "ItemDeliveries", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>ItemDeliveries Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("UserBillings", "Index", "UserBillings")</h2>
+        <h2>@Html.ActionLink("UserBillings", "Index", "UserBillings", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>UserBillings Database</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("AdminEmails", "Index", "AdminEmails")</h2>
+        <h2>@Html.ActionLink("AdminEmails", "Index", "AdminEmails", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Admin Emails Database</p>
     </div>
 </div>
