--- a/IClothingApplication/Views/OrderStatus/Index.cshtml
+++ b/IClothingApplication/Views/OrderStatus/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.status)
+            @Html.DisplayNameFor(model => model.currentStatus)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.statusDate)
@@ -26,7 +26,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.status)
+            @Html.DisplayFor(modelItem => item.currentStatus)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.statusDate)
@@ -35,9 +35,9 @@
             @Html.DisplayFor(modelItem => item.ShoppingCart.cartID)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.statusID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.statusID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.statusID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.cartID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.cartID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.cartID })
         </td>
     </tr>
 }
