--- a/IClothingApplication/Views/UserPasswords/Index.cshtml
+++ b/IClothingApplication/Views/UserPasswords/Index.cshtml
@@ -53,9 +53,9 @@
             @Html.DisplayFor(modelItem => item.Customer.customerName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.ActionLink("Edit", "Edit", new { id=item.userAccountName }) |
+            @Html.ActionLink("Details", "Details", new { id=item.userAccountName }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.userAccountName })
         </td>
     </tr>
 }
