--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -22,7 +22,7 @@
 
 <br />
 
-<div class="pt-1 sticky-top bg-white" style="">
+<div class="pt-1 sticky-top bg-white" style="z-index:1">
     <div class="d-flex justify-content-between align-items-end p-1 mt-2 align-items-center" style="height:min-content">
         <a class="h6 text-dark" data-bs-toggle="collapse" href="#filterCollapse" role="button" aria-expanded="false" aria-controls="filterCollapse">
             Filters
@@ -167,6 +167,7 @@
 <script>
     window.onload = function () {
         $('.addToCartButton').click(function () {
+            $('#productModal').modal('hide');
             $.ajax({
                 url: '@Url.Action("Add", "Products")',
                 type: 'POST',
