Fix home page footer, fix registration

--- a/IClothingApplication/Views/Shared/_Layout.cshtml
+++ b/IClothingApplication/Views/Shared/_Layout.cshtml
@@ -102,7 +102,7 @@
         </div>
     </nav>
 
-    <div class="container body-content flex-grow-1" ">
+    <div class="container body-content flex-grow-1">
         @RenderBody()
         @*<hr />*@
     </div>
