--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -30,7 +30,7 @@
         @using (Html.BeginForm("Index", "Products", new { sortOrder = ViewBag.sortOrder, filter = ViewBag.filter, filterType = ViewBag.filterType, changeSort = false }, FormMethod.Post, new { @class = "flex-grow-1 px-5" }))
         {
             <nav class="navbar navbar-expand p-0">
-                @Html.TextBox("SearchString", "", new { @class = "form-control me-sm-2", @placeholder = "Search Items By Name" })
+                @Html.TextBox("SearchString", "", new { @class = "form-control me-sm-2", @placeholder = "Search Items By Name", @id = "search-input" })
                 <input type="submit" value="Search" class="btn btn-outline-success my-2 my-sm-0" />
             </nav>
         }
